--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -17,6 +17,10 @@ jobs:
       run: mkdir build && cd build && cmake ..
     - name: build
       run: cmake --build build --config Release
+    - uses: actions/upload-artifact@v1
+      with: 
+        name: bin2h-darwin
+        path: build/Release/
 
   build-windows:
 
