--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -20,7 +20,7 @@ jobs:
     - uses: actions/upload-artifact@v1
       with: 
         name: bin2h-darwin
-        path: build/Release/
+        path: build
 
   build-windows:
 
